Font and nav bar

--- a/CSS/style-about.css
+++ b/CSS/style-about.css
@@ -1,5 +1,5 @@
 body {
-  font-family:"Cabin", Helvetica, sans-serif;
+  font-family:Candara, "Trebuchet MS", Trebuchet, sans-serif;
 }
 
 .img-circle {
@@ -10,13 +10,6 @@ body {
     float: center;
     padding: 0 200px 40px 0;
     display: inline;
-}
-
-
-#list {
-  float: right;
- padding: 0 200px 40px 0;
-  font-size: 1em;
 }
 
 h1{
